Feat/tests (#35)
* feat: add firt part of tests

* feat: add missing tests

* feat(github): add workflow

* fix(worlflow): version of upload artifact

* fix(permission): add gradlew permission